# ros-parameters-experiment

./: README.md  run_experiment.sh  shared_params.yaml
Dockerfiles/: Dockerfile.ros1  Dockerfile.ros2  ros1_entrypoint.sh  ros2_entrypoint.sh
ros1_ws/src/my_node/: CMakeLists.txt  package.xml
ros1_ws/src/my_node/scripts/: ros1_node.py
ros2_ws/src/my_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/my_node/my_node/: ros2_node.py
