<?xml version="1.0"?>
<package format="2">
  <name>my_node</name>
  <version>0.0.0</version>
  <description>The ROS1 test node</description>

  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
</package>

